# segmentation-benchmark

./: .gitignore  FULL_PROJECT.md  README.md  environment.yml  pyproject.toml
configs/: baysor_config.toml  baysor_prior_config.toml  baysor_prior_config_c05.toml  baysor_prior_config_c08.toml  baysor_prior_config_c10.toml  bidcell_config.yaml
docs/: dataset.md
notebooks/: run_segger_colab.ipynb
scripts/: add_cellpose_prior.py  add_nuclear_prior.py  annotate_cell_types.py  annotate_clusters.py  build_10x_adata.py  build_baysor_adata.py  build_baysor_conf_adata.py  build_baysor_nuclear_prior_adata.py  build_baysor_prior_adata.py  build_bidcell_adata.py  build_density_heatmap.py  build_eosin_channel.py  build_expanded_adatas.py  build_mesmer_adata.py  build_missing_factorial_adatas.py  build_segger_adata.py  compute_celltype_centroid_distances.py  compute_many_to_one.py  download_data.sh  lum_ep_subtype_analysis.py  make_agreement_explainer.py  make_cluster_comparison.py  make_decomposition_figure.py  make_figures.py  make_pdf_report.py  make_pipeline_diagram.py  quantify_masks.py  run_baysor.sh  run_baysor_c10.sh  run_baysor_conf_sensitivity.sh  run_baysor_nuclear_priors.sh  run_bidcell.py  run_candidate_comparison.py  run_cell_size_disagreement.py  run_cellpose_cyto3.py  run_cellpose_roi.py  run_comparison.py  run_comparison_he_anchor.py  run_comparison_new_methods.py  run_convergence.py  (+24 more)
src/segbench/: __init__.py  io.py  (+5 more)
tests/: test_cellpose_run.py  test_code_hygiene.py  test_compare.py  test_io.py  test_quantify.py  test_segmentation_wrappers.py  test_spatial.py
(+5 files in other folders)
